# seanb-utils

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yaml
installer/: cargo-installs  check-local-bin  check-path  exists-install  golang-installs  python-installs
python-src/: P_README.md  README.md  requirements.txt  setup.cfg  setup.py
python-src/seanb/: clipboard.py
python-src/src/seanb/: jsonfast.py  notify.py
shellscripts/: average  capitalize  clipcopy  clippaste  dir-size  epoch  epochdisplay  epochguess  get-extension  gifme  git-has-changes  git-has-untracked-files  git-list-untracked-files  gitopen  group-and-termgraph  havecmd  html-head  image-dimensions  img-download  input-dialog  ix  json-compress  lastdown  lower  mduration  medialength  mtotal  mvlast  notify  openurl  openurls  picker  prefix  remove-extension  replace-extension  rotate-img  shebang  sort-by-last-col  suffix  surround  (+6 more)
