[metadata]
name = seanb
version = 0.1.0
description = seanb core utilities/functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/core
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = seanb
install_requires =
    atomicwrites
    beautifulsoup4
    click
    requests
    tabulate
    toml
python_requires = >=3.8
include_package_data = True

[options.package_data]
seanb = py.typed

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
namespace_packages = True
warn_unreachable = True

[flake8]
ignore = E501,E402,W503,E266,E203
